# active

./: .gitignore  .travis.yml  CHANGES  LICENSE  README.markdown  active.cabal  cabal.haskell-ci  cabal.project  stack.yaml
.github/workflows/: haskell-ci.yml
diagrams/: Makefile  ui.hs
example/: Animation.hs  CRT.hs  CRT2.hs  CRTAccum.hs  Clock.hs  Pythagoras.hs  README.md  RotSquare.hs  RotTri.hs  Spline.hs  active-examples.cabal  run-animation
explore/: RandomQ.hs  Sticky.hs
old-semantics/: IApplicative.hs  Shake.hs  active-semantics.cabal
old-semantics/FARM/: abstract.lhs
old-semantics/old/: LICENSE  active-semantics.bib  active-semantics.lhs
old-semantics/old/diagrams/: active-semantics-diagrams-latex-fig1.hs  active-semantics-diagrams-latex-fig10.hs  active-semantics-diagrams-latex-fig11.hs  active-semantics-diagrams-latex-fig12.hs  active-semantics-diagrams-latex-fig13.hs  active-semantics-diagrams-latex-fig2.hs  active-semantics-diagrams-latex-fig3.hs  active-semantics-diagrams-latex-fig4.hs  active-semantics-diagrams-latex-fig5.hs  active-semantics-diagrams-latex-fig6.hs  active-semantics-diagrams-latex-fig7.hs  active-semantics-diagrams-latex-fig8.hs  active-semantics-diagrams-latex-fig9.hs
old/semantics/FARM/: Shake.hs
paper/: Shake.hs  active-FARM18.lhs  build.sh  diagrams-latex.sty  stack.yaml
paper/haskell2020/: Shake.hs  active.lhs  notes.txt  stack.yaml
pubs/FARM13/: 13-09-28-active-demo.lhs  ActiveDiagrams.hs  Shake.hs  Test.hs  lhs2TeX-extra.fmt
semantics/: Active.agda  ActiveCheck.hs  ActiveDiagrams.hs  Shake.hs  active-semantics.bib  active-semantics.lhs  active.org
semantics/FARM/: ActiveDiagrams.hs  abstract.bib  abstract.lhs
src/: Active.hs
src/Active/: AffineInterval.hs  Class.hs  Duration.hs  Ray.hs
src/Control/: IApplicative.hs
src/Control/IApplicative/: Examples.hs  Unified.hs
src/Data/: Active-old.hs  Active.hs
src/Data/Active/: Endpoint.hs  Era.hs  Time.hs  Util.hs
test/: Laws.hs  active-doctest.hs  active-tests.hs
