name:                active
version:             0.3
synopsis:            An EDSL for time-varying values.
description:         active is a small EDSL for building continuous,
                     time-varying values
                     of arbitrary type. It is particularly useful for
                     building media such as animations, audio clips,
                     and the like, but it is often useful to have
                     other values that vary over time (vectors,
                     colors, filters, volume levels...) and be able to
                     create and use them in the service of
                     constructing time-varying media.
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          byorgey@gmail.com
copyright:           (c) 2011-2017 Brent Yorgey
category:            Data
build-type:          Simple
cabal-version:       1.18
extra-source-files:  CHANGES, README.markdown, diagrams/*.svg
extra-doc-files:     diagrams/*.svg
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1, GHC == 8.2.1
bug-reports:         https://github.com/diagrams/active/issues
source-repository head
  type:     git
  location: https://github.com/diagrams/active.git

library
  exposed-modules:     Active,
                       Active.Duration
  other-extensions:    FlexibleContexts,
                       FlexibleInstances,
                       GADTSyntax,
                       KindSignatures
  build-depends:       base >= 4.6 && < 4.13,
                       bifunctors >= 5.4 && < 5.6,
                       semigroups >= 0.1 && < 0.19,
                       vector >= 0.10 && < 0.13,
                       linear >= 1.14 && < 1.21
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite active-doctests
  type:                exitcode-stdio-1.0
  main-is:             active-doctest.hs
  build-depends:       base,
                       directory,
                       doctest,
                       semigroups >= 0.1 && < 0.19,
                       vector >= 0.10 && < 0.13,
                       linear >= 1.14 && < 1.21
  hs-source-dirs:      test
  default-language:    Haskell2010
