name:                active
version:             0.3
synopsis:            An EDSL for time-varying values.
description:         active is a small EDSL for building continuous,
                     time-varying values
                     of arbitrary type. It is particularly useful for
                     building media such as animations, audio clips,
                     and the like, but it is often useful to have
                     other values that vary over time (vectors,
                     colors, filters, volume levels...) and be able to
                     create and use them in the service of
                     constructing time-varying media.
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          byorgey@gmail.com
copyright:           (c) 2011-2017 Brent Yorgey
category:            Data
build-type:          Custom
cabal-version:       1.18
extra-source-files:  CHANGES, README.markdown, diagrams/*.svg
extra-doc-files:     diagrams/*.svg
bug-reports:         https://github.com/diagrams/active/issues

tested-with:
   GHC == 8.4.4
   GHC == 8.6.5
   GHC == 8.8.4
   GHC == 8.10.7
   GHC == 9.0.1
   GHC == 9.2.1

source-repository head
  type:     git
  location: https://github.com/diagrams/active.git

custom-setup
 setup-depends:
   base >= 4.7 && < 4.17,
   Cabal,
   cabal-doctest >= 1 && <1.1

library
  exposed-modules:     Active,
                       Active.Duration
  other-modules:       Active.Ray
  other-extensions:    FlexibleContexts,
                       FlexibleInstances,
                       GADTSyntax,
                       KindSignatures
  build-depends:       base       >= 4.11 && < 5.0,
                       bifunctors >= 5.4  && < 5.6,
                       semigroups >= 0.1  && < 0.21,
                       vector     >= 0.10 && < 0.13,
                       linear     >= 1.14 && < 1.22
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             active-doctest.hs
  build-depends:       base,
                       doctest
  hs-source-dirs:      test
  default-language:    Haskell2010
